@@ -1170,7 +1170,7 @@ class CollectionsStatus:
         """
         # quick fix to spaces in filepath
         modified_filepath = ""
-        if (" " in filepath) == True:
+        if " " in filepath:
             modified_filepath = '"' + filepath.replace(" ", r"\x20") + '"'
 
         if not self.matched_chain_pair:
