@@ -90,6 +90,7 @@ New in v0.7.06 (2015/12/07)
   - This adds backends/b2backend.py, modifies log.py to add an
     error code and modifies commandline.py to add the b2://
     example to the help text.
+* Pep8 corrections for recently released code.
 
 
 New in v0.7.05 (2015/09/15)
